Add Vercel deployment configuration
- Added vercel.json for static site deployment
- Updated build script to create public directory
- Configured proper routing for static files

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npx live-server --port=3000 --open",
     "dev": "npx live-server --port=3000 --open --watch=.",
     "serve": "npx http-server -p 3000 -o",
-    "build": "echo 'Build completed - static files ready for deployment'",
+    "build": "mkdir -p public && cp -r *.html *.css *.json js public/",
     "preview": "npx live-server --port=3000",
     "test": "echo 'No tests specified'"
   },
